[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/screens/LinkWalletPanel.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Linking wallet." ]
}

[sub_resource type="Animation" id=1]
resource_name = "animate"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Linking wallet", "Linking wallet.", "Linking wallet..", "Linking wallet...", "Linking wallet" ]
}

[node name="Link Wallet" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 29.0
script = ExtResource( 1 )

[node name="PleaseLoginDialog" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="PleaseLoginDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -13.0
margin_right = 203.0
margin_bottom = 13.0
text = "Please Login on the previous tab."
align = 1

[node name="AlreadyLinkedDialog" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="AlreadyLinkedDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -13.0
margin_right = 203.0
margin_bottom = 13.0
text = "Your wallet is already linked."
align = 1

[node name="LinkingDialog" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="LinkingDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -12.5
margin_right = 74.0
margin_bottom = 13.5
text = "Linking wallet."

[node name="AnimationPlayer" type="AnimationPlayer" parent="LinkingDialog"]
anims/RESET = SubResource( 2 )
anims/animate = SubResource( 1 )

[node name="LinkWalletDialog" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
custom_constants/separation = 10
alignment = 1

[node name="CurrentUser" type="HBoxContainer" parent="LinkWalletDialog"]
margin_top = 141.0
margin_right = 819.0
margin_bottom = 155.0
alignment = 1

[node name="Label" type="Label" parent="LinkWalletDialog/CurrentUser"]
margin_left = 313.0
margin_right = 445.0
margin_bottom = 14.0
text = "Link a wallet to user "
align = 1

[node name="Name" type="Label" parent="LinkWalletDialog/CurrentUser"]
margin_left = 449.0
margin_right = 506.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.913725, 0.411765, 0.215686, 1 )
text = "John Doe"

[node name="Spacing" type="Label" parent="LinkWalletDialog"]
margin_top = 165.0
margin_right = 819.0
margin_bottom = 179.0

[node name="WalletAddressLabel" type="Label" parent="LinkWalletDialog"]
margin_top = 189.0
margin_right = 819.0
margin_bottom = 203.0
text = "Wallet Address"
align = 1

[node name="WalletAddressField" type="LineEdit" parent="LinkWalletDialog"]
margin_top = 213.0
margin_right = 819.0
margin_bottom = 237.0
align = 1

[node name="Spacing2" type="Label" parent="LinkWalletDialog"]
margin_top = 247.0
margin_right = 819.0
margin_bottom = 261.0

[node name="ErrorLabel" type="Label" parent="LinkWalletDialog"]
margin_top = 271.0
margin_right = 819.0
margin_bottom = 285.0
custom_colors/font_color = Color( 1, 0.286275, 0.286275, 1 )
align = 1

[node name="LinkButton" type="Button" parent="LinkWalletDialog"]
margin_top = 295.0
margin_right = 819.0
margin_bottom = 315.0
text = "Link Wallet"

[connection signal="text_entered" from="LinkWalletDialog/WalletAddressField" to="." method="_on_WalletAddressField_text_entered"]
[connection signal="pressed" from="LinkWalletDialog/LinkButton" to="." method="_on_LinkButton_pressed"]
